squareline_folder/compile_log.txt
/Users/umeshgopi/finalhope/test_repo_esp/driving_eyes/driving_eyes.ino: In function 'void handleCmd(const char*)':
/Users/umeshgopi/finalhope/test_repo_esp/driving_eyes/driving_eyes.ino:207:25: error: 'BLACK' was not declared in this scope
  207 |         gfx->fillScreen(BLACK);
      |                         ^~~~~
/Users/umeshgopi/finalhope/test_repo_esp/driving_eyes/driving_eyes.ino: In function 'void setup()':
/Users/umeshgopi/finalhope/test_repo_esp/driving_eyes/driving_eyes.ino:243:21: error: 'BLACK' was not declared in this scope
  243 |     gfx->fillScreen(BLACK);
      |                     ^~~~~

[92mUsed library[0m            [92mVersion[0m [90mPath[0m
[93mSPIFFS[0m                  3.3.7   [90m/Users/umeshgopi/Library/Arduino15/packages/esp32/hardware/esp32/3.3.7/libraries/SPIFFS[0m
[93mFS[0m                      3.3.7   [90m/Users/umeshgopi/Library/Arduino15/packages/esp32/hardware/esp32/3.3.7/libraries/FS[0m
[93mJPEGDEC[0m                 1.8.4   [90m/Users/umeshgopi/Arduino/libraries/JPEGDEC[0m
[93mGFX Library for Arduino[0m 1.6.5   [90m/Users/umeshgopi/Arduino/libraries/GFX_Library_for_Arduino[0m
[93mSPI[0m                     3.3.7   [90m/Users/umeshgopi/Library/Arduino15/packages/esp32/hardware/esp32/3.3.7/libraries/SPI[0m
[93mWire[0m                    3.3.7   [90m/Users/umeshgopi/Library/Arduino15/packages/esp32/hardware/esp32/3.3.7/libraries/Wire[0m
[93mTCA9554[0m                 0.1.3   [90m/Users/umeshgopi/Arduino/libraries/TCA9554[0m

[92mUsed platform[0m [92mVersion[0m [90mPath[0m
[93mesp32:esp32[0m   3.3.7   [90m/Users/umeshgopi/Library/Arduino15/packages/esp32/hardware/esp32/3.3.7[0m
Error during build: exit status 1
